tests/lean/apply_fail.lean.expected.out
apply_fail.lean:3:2: error:invalid 'apply' tactic, failed to unify
  a ∧ b
with
  ?M_1 ∨ ?M_2
proof state:
a b : Prop
⊢ a ∧ b
apply_fail.lean:4:0: error: don't know how to synthesize placeholder
a b : Prop
⊢ a ∧ b
apply_fail.lean:4:0: error: failed to add declaration '14.0' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (a b : Prop),
    ?M_1
