tests/lean/apply_fail.lean
example (a b : Prop) : a ∧ b :=
begin
  apply or.inr
end
